--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "Dockerfile", "use": "@vercel/docker" }
+    { "src": "api/index.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "api/index.py" }
   ],
   "env": {
     "ALLOW_ORIGINS": "*",
